# Sentinel

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routers/: chaos.py  chat.py
app/core/: chaos.py  config.py  logger.py
app/database/: db.py  models.py  session.py
app/graph/: orchestrator.py
app/resilience/: circuit_breaker.py  provider_health.py
app/schemas/: streaming.py
app/services/: chat_service.py  provider_service.py
app/streaming/: event_bus.py  manager.py  protocol.py
app/tools/: mcp_tools.py
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chaos-dashboard.tsx  sentinel-chat.tsx
tests/: test_resilience.py
